Fixed height of home page search box on IE11.

--- a/styles/home.sass
+++ b/styles/home.sass
@@ -209,6 +209,7 @@ section.partners a
   box-sizing: border-box
   display: inline-block
   font-size: 16px
+  height: 50px
   line-height: 46px
   margin: 0
   padding: 0 20px
